lab3/src/main/java/antr/JavaParser.java
// Generated from D:/study/5sem/MT/lab3/src/main/java\Java.g4 by ANTLR 4.9.2
package antr;

	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, DO=3, PACKAGE=4, IMPORT=5, PUBLIC=6, PRIVATE=7, PROTECTED=8, 
		STATIC=9, CLASS=10, INTERFACE=11, EXTENDS=12, IMPLEMENTS=13, THROWS=14, 
		VOID=15, INT=16, STRING=17, BOOL=18, LONG=19, DOUBLE=20, FLOAT=21, CHAR=22, 
		NULL=23, IF=24, ELSE=25, FOR=26, WHILE=27, RETURN=28, INTEGER_NUM=29, 
		DOUBLE_NUM=30, BOOLEAN_VALUE=31, CHAR_VALUE=32, STRING_VALUE=33, WORD=34, 
		WS=35, TAB=36, R=37, NEWLINE=38, COMMA=39, DOT=40, OP_BRACKET=41, CL_BRACKET=42, 
		OP_BRACE=43, CL_BRACE=44, INIT=45, QUOTE=46, DOUBLE_QOUTE=47, SEMICOLON=48, 
		PLUS=49, MINUS=50, DIV=51, MUL=52, MOD=53, OR=54, AND=55, LESS=56, GREATER=57, 
		EQ=58;
	public static final int
		RULE_start = 0, RULE_parsePackage = 1, RULE_packageName = 2, RULE_parseImport = 3, 
		RULE_importName = 4, RULE_code = 5, RULE_parseClass = 6, RULE_classPiece = 7, 
		RULE_classMethod = 8, RULE_classMethodReturnOrFeild = 9, RULE_statement = 10, 
		RULE_parseIf = 11, RULE_parseFor = 12, RULE_parseWhile = 13, RULE_parseDoWhile = 14, 
		RULE_extend = 15, RULE_implement = 16, RULE_parseInterface = 17, RULE_interfacePiece = 18, 
		RULE_modifier = 19, RULE_type = 20, RULE_interfaceMethod = 21, RULE_arg = 22, 
		RULE_interfaceMethodOrFeild = 23, RULE_varInit = 24, RULE_data = 25, RULE_expr = 26, 
		RULE_condition = 27, RULE_word = 28, RULE_space = 29, RULE_tab = 30, RULE_newline = 31, 
		RULE_ws = 32, RULE_comma = 33, RULE_dot = 34, RULE_op_bracket = 35, RULE_cl_bracket = 36, 
		RULE_op_brace = 37, RULE_cl_brace = 38, RULE_init = 39, RULE_semicolon = 40, 
		RULE_plus = 41, RULE_minus = 42, RULE_div = 43, RULE_mul = 44, RULE_mod = 45, 
		RULE_or = 46, RULE_and = 47, RULE_less = 48, RULE_greater = 49, RULE_eq = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "parsePackage", "packageName", "parseImport", "importName", 
			"code", "parseClass", "classPiece", "classMethod", "classMethodReturnOrFeild", 
			"statement", "parseIf", "parseFor", "parseWhile", "parseDoWhile", "extend", 
			"implement", "parseInterface", "interfacePiece", "modifier", "type", 
			"interfaceMethod", "arg", "interfaceMethodOrFeild", "varInit", "data", 
			"expr", "condition", "word", "space", "tab", "newline", "ws", "comma", 
			"dot", "op_bracket", "cl_bracket", "op_brace", "cl_brace", "init", "semicolon", 
			"plus", "minus", "div", "mul", "mod", "or", "and", "less", "greater", 
			"eq"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'L'", "'F'", "'do'", "'package'", "'import'", "'public'", "'private'", 
			"'protected'", "'static'", "'class'", "'interface'", "'extends'", "'implements'", 
			"'throws'", "'void'", "'int'", "'String'", "'boolean'", "'long'", "'double'", 
			"'float'", "'char'", "'null'", "'if'", "'else'", "'for'", "'while'", 
			"'return'", null, null, null, null, null, null, "' '", "'\t'", "'\r'", 
			"'\n'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'='", "'''", "'\"'", 
			"';'", "'+'", "'-'", "'/'", "'*'", "'%'", "'||'", "'&&'", "'<'", "'>'", 
			"'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "DO", "PACKAGE", "IMPORT", "PUBLIC", "PRIVATE", "PROTECTED", 
			"STATIC", "CLASS", "INTERFACE", "EXTENDS", "IMPLEMENTS", "THROWS", "VOID", 
			"INT", "STRING", "BOOL", "LONG", "DOUBLE", "FLOAT", "CHAR", "NULL", "IF", 
			"ELSE", "FOR", "WHILE", "RETURN", "INTEGER_NUM", "DOUBLE_NUM", "BOOLEAN_VALUE", 
			"CHAR_VALUE", "STRING_VALUE", "WORD", "WS", "TAB", "R", "NEWLINE", "COMMA", 
			"DOT", "OP_BRACKET", "CL_BRACKET", "OP_BRACE", "CL_BRACE", "INIT", "QUOTE", 
			"DOUBLE_QOUTE", "SEMICOLON", "PLUS", "MINUS", "DIV", "MUL", "MOD", "OR", 
			"AND", "LESS", "GREATER", "EQ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Java.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public StringBuilder html = new StringBuilder("<html>\n\t<head>\n\t\t<title>Code</title>\n" +
	    "\t\t<style>\n\t\t\tbody {\n\t\t\t\tfont: normal normal 18px courier;\n\t\t\t}\n" +
	    "\t\t\t.highlight  {\n\t\t\t\tcolor: darkorange;\n\t\t\t}\n" +
	    "\t\t\t.number {\n\t\t\t\tcolor: darkseagreen;\n\t\t\t}\n" +
	    "\t\t\t.string {\n\t\t\t\tcolor: olivedrab;\n\t\t\t}\n" +
	    "\t\t\t.types {\n\t\t\t\tcolor: darkgoldenrod;\n\t\t\t}\n\t\t</style>\n\t</head>\n" +
	    "\t<body text=\"#ffe4c4\" bgcolor=\"#282923\">\n\t\t");
	    private void highlight (String s) {
	        html.append("<span class=\"highlight\">").append(s).append("</span>");
	    }
	    private void number (String s) {
	        html.append("<span class=\"number\">").append(s).append("</span>");
	    }
	    private void string (String s) {
	        html.append("<span class=\"string\">").append(s).append("</span>");
	    }
	    private void types (String s) {
	        html.append("<span class=\"types\">").append(s).append("</span>");
	    }

	public JavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavaParser.EOF, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public ParsePackageContext parsePackage() {
			return getRuleContext(ParsePackageContext.class,0);
		}
		public List<ParseImportContext> parseImport() {
			return getRuleContexts(ParseImportContext.class);
		}
		public ParseImportContext parseImport(int i) {
			return getRuleContext(ParseImportContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(102);
				ws();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(105);
				parsePackage();
				}
			}

			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(108);
				parseImport();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			code();
			setState(115);
			match(EOF);

			        html.append("<br>\n\t</body>\n</html>");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsePackageContext extends ParserRuleContext {
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public SemicolonContext semicolon() {
			return getRuleContext(SemicolonContext.class,0);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public TerminalNode PACKAGE() { return getToken(JavaParser.PACKAGE, 0); }
		public ParsePackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsePackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterParsePackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitParsePackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitParsePackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsePackageContext parsePackage() throws RecognitionException {
		ParsePackageContext _localctx = new ParsePackageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parsePackage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(118);
			match(PACKAGE);
			highlight("package");
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(121);
				ws();
				}
			}

			setState(124);
			packageName();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(125);
				ws();
				}
			}

			setState(128);
			semicolon();
			setState(129);
			ws();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageNameContext extends ParserRuleContext {
		public List<WordContext> word() {
			return getRuleContexts(WordContext.class);
		}
		public WordContext word(int i) {
			return getRuleContext(WordContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public PackageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterPackageName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitPackageName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitPackageName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageNameContext packageName() throws RecognitionException {
		PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			word();
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(132);
					dot();
					setState(133);
					word();
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseImportContext extends ParserRuleContext {
		public ImportNameContext importName() {
			return getRuleContext(ImportNameContext.class,0);
		}
		public SemicolonContext semicolon() {
			return getRuleContext(SemicolonContext.class,0);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public TerminalNode IMPORT() { return getToken(JavaParser.IMPORT, 0); }
		public ParseImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterParseImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitParseImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitParseImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseImportContext parseImport() throws RecognitionException {
		ParseImportContext _localctx = new ParseImportContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parseImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(140);
			match(IMPORT);
			highlight("import");
			}
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(143);
				ws();
				}
			}

			setState(146);
			importName();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(147);
				ws();
				}
			}

			setState(150);
			semicolon();
			setState(151);
			ws();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportNameContext extends ParserRuleContext {
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public DotContext dot() {
			return getRuleContext(DotContext.class,0);
		}
		public MulContext mul() {
			return getRuleContext(MulContext.class,0);
		}
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public ImportNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterImportName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitImportName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitImportName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportNameContext importName() throws RecognitionException {
		ImportNameContext _localctx = new ImportNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			packageName();
			setState(154);
			dot();
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MUL:
				{
				setState(155);
				mul();
				}
				break;
			case WORD:
				{
				setState(156);
				word();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public ParseClassContext parseClass() {
			return getRuleContext(ParseClassContext.class,0);
		}
		public ParseInterfaceContext parseInterface() {
			return getRuleContext(ParseInterfaceContext.class,0);
		}
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(JavaParser.PUBLIC, 0); }
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUBLIC) {
				{
				{
				setState(159);
				match(PUBLIC);
				highlight("public");
				}
				setState(162);
				ws();
				}
			}

			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				{
				setState(165);
				parseClass();
				}
				break;
			case INTERFACE:
				{
				setState(166);
				parseInterface();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseClassContext extends ParserRuleContext {
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public Op_braceContext op_brace() {
			return getRuleContext(Op_braceContext.class,0);
		}
		public Cl_braceContext cl_brace() {
			return getRuleContext(Cl_braceContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(JavaParser.CLASS, 0); }
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public ExtendContext extend() {
			return getRuleContext(ExtendContext.class,0);
		}
		public ImplementContext implement() {
			return getRuleContext(ImplementContext.class,0);
		}
		public List<ClassPieceContext> classPiece() {
			return getRuleContexts(ClassPieceContext.class);
		}
		public ClassPieceContext classPiece(int i) {
			return getRuleContext(ClassPieceContext.class,i);
		}
		public ParseClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).enterParseClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaListener ) ((JavaListener)listener).exitParseClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaVisitor ) return ((JavaVisitor<? extends T>)visitor).visitParseClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseClassContext parseClass() throws RecognitionException {
		ParseClassContext _localctx = new ParseClassContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parseClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(169);
			match(CLASS);
			highlight("class");
			}
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(172);
				ws();
				}
			}

			setState(175);
			word();
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
					{
					setState(176);
					ws();
					}
				}

				setState(179);
				extend();
				}
				break;
			}
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
					{
					setState(182);
					ws();
					}
				}

				setState(185);
				implement();
				}
				break;
			}
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << TAB) | (1L << NEWLINE))) != 0)) {
				{
				setState(188);
				ws();
				}
			}

			setState(191);
			op_brace();
